--- a/myTrello.css
+++ b/myTrello.css
@@ -11,6 +11,46 @@
 	vertical-align: center;
 }
 
+.extensions {
+	margin-top: 10%;
+	background-color: #ffff77;
+	width: 15%;
+	color: "black";
+//	padding: 10px;
+	float: none;
+	position: fixed;
+	text-align: center;
+	vertical-align: center;
+}
+
+.category {
+	background-color: yellow;
+	color: black;
+	padding: 10px;
+	text-align: center;
+	vertical-align: center;
+	border-style: solid;
+	border-color: gray;
+	border-width: 1px;
+}
+
+.subcategory {
+	background-color: #ffff77;
+	visibility: hidden;
+	padding: 0px;
+}
+
+.content {
+	float: left;
+	background-color: #ffff77;
+	padding-left: 300px;
+	padding-right: 300px;
+	padding-bottom: 100px;
+	padding-top: 100px;
+	margin-left: 35%;
+	margin-top: 10%;
+}
+
 .task {
 	background-color: #FFFF77;
 	width: 80%;
@@ -31,10 +71,13 @@ textarea {
 
 
 footer {
+	background-color: #ffff77;
 	bottom: 0;
 	text-align: center;
-	right: 46%;
-	margin-top: 10px;
+	width: 100%;
+	margin-bottom: 0px;
+	position: fixed;
+	padding: 10px;
 }
 
 h1 {
